--- a/Python_Flask/static/style.css
+++ b/Python_Flask/static/style.css
@@ -2,16 +2,22 @@ body {
     padding: 20px;
 }
 
-a, h1, h2 {
+a, h1, h2, h3 {
     color: #4472c4;
 }
 
 h1 {
     border-bottom: 2px solid #a5d3ee;
+    margin-top:0
 }
 
 h2 {
     font-size: 1.2em;
+}
+
+h3 {
+    font-size: 0.9em;
+    font-weight:normal
 }
 
 table.dataframe,  .dataframe th,  .dataframe td {
@@ -22,7 +28,7 @@ table.dataframe,  .dataframe th,  .dataframe td {
     border-collapse: collapse;
     text-align: left;
     padding: 9px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     font-size: 0.9em;
 }
 
