--- a/Python_Flask/templates/et_template.html
+++ b/Python_Flask/templates/et_template.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>FB Effort</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="icon" href="/home/ute/zhanghao/Python_Flask/icon.png" type="image/x-icon"/>
 </head>
 <body>
 <style>
@@ -18,9 +19,22 @@ body{ font-family: "微软雅黑"}
 <h2>FB Effort Per Team Percentage</h2>
 {{ percentage|safe }}
 
+<h2>FB Effort -- Blues</h2>
+{{ total_blues|safe }}
+
+<h2>FB Effort -- Jazz</h2>
+{{ total_jazz|safe }}
+
+<h2>FB Effort -- Rock</h2>
+{{ total_rock|safe }}
+
+<h2>FB Effort -- Shield</h2>
+{{ total_shield|safe }}
+
+
 <h3><a href="https://jiradc.ext.net.nokia.com/issues/?filter=332653" target="_blank">Jira filter link</a>
-<br>Jazz HC=8, Blues HC=7, Squad C HC=8, Rock HC=7, Shield HC=7
-<br>FB=End FB, Effort=Remaining Effort(h), Team Capacity=HC * 120h
+<br>Blues HC=7, Jazz HC=7, Rock HC=7, Shield HC=6, Squad C HC=8
+<br>FB=End FB, Effort=Remaining Effort(h), Team Capacity=HC * 120h - 40h (40h for SM)
 </h3>
 
 </body>
