--- a/Python_Flask/templates/effort_template.html
+++ b/Python_Flask/templates/effort_template.html
@@ -15,9 +15,11 @@ body{ font-family: "微软雅黑"}
 
 <h2>FB Effort Per Team</h2>
 {{ total|safe }}
+<h3> Current FB: Origin Effort and Remaining Effort, Future FB: only Remaining Effort</h3>
 
 <h2>FB Effort Per Team Percentage</h2>
 {{ percentage|safe }}
+<h3> Percentage = Remaining Effort / Team Capacity</h3>
 
 <h2>FB Effort -- Blues</h2>
 {{ total_blues|safe }}
