--- a/Python_Flask/templates/null_template.html
+++ b/Python_Flask/templates/null_template.html
@@ -10,11 +10,7 @@
 body{ font-family: "微软雅黑"}
 </style>
 
-<h2><a href="http://127.0.0.1/FB_Effort" target="_self">FB Effort</a></h2>
-
-<h2><a href="http://127.0.0.1/Issue_Hunter" target="_self">Issue Hunter</a></h2>
-
-<h2><a href="http://127.0.0.1/Long_Open_Issue" target="_self">Long Open Issue</a></h2>
+<h2>Null Jira raised yet this year</a></h2>
 
 </body>
 </html>
