update power off on code

--- a/Python_Flask/templates/home_template.html
+++ b/Python_Flask/templates/home_template.html
@@ -16,5 +16,7 @@ body{ font-family: "微软雅黑"}
 
 <h2><a href="http://127.0.0.1/Long_Open_Issue" target="_self">Long Open Issue</a></h2>
 
+<h2><a href="http://127.0.0.1/TL_status" target="_self">Testline Status</a></h2>
+
 </body>
 </html>
