--- a/Python_Flask/templates/et_rep_jira.html
+++ b/Python_Flask/templates/et_rep_jira.html
@@ -7,43 +7,55 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="../static/datatables.js"></script>
     <script>
-        // 增加列过滤
         $(document).ready(function() {
-            $('#myTable').DataTable({
-                initComplete: function () {
-                    this.api().columns().every(function () {
-                        var column = this;
-                        var select = $('<select><option value=""></option></select>')
-                            .appendTo($(column.header()))
-                            .on('change', function () {
-                                var val = $.fn.dataTable.util.escapeRegex(
-                                    $(this).val()
-                                );
-                                column
-                                    .search(val ? '^' + val + '$' : '', true, false)
-                                    .draw();
-                            });
-
-                        column.data().unique().sort().each(function (d, j) {
-                            select.append('<option value="' + d + '">' + d + '</option>')
-                        });
+    $('#myTable').DataTable({
+        initComplete: function () {
+            this.api().columns().every(function () {
+                var column = this;
+                var select = $('<select><option value=""></option></select>')
+                    .appendTo($(column.header()))
+                    .on('change', function () {
+                        var val = $.fn.dataTable.util.escapeRegex(
+                            $(this).val()
+                        );
+                        column
+                            .search(val ? '^' + val + '$' : '', true, false)
+                            .draw();
                     });
-                },
-                ordering: false, //取消排序
-                autoWidth: true, //自动列宽
-                language: {
-                    "emptyTable": "No data available in table",
-                    "info": "Showing _START_ to _END_ of _TOTAL_ entries",
-                    "infoEmpty": "Showing 0 to 0 of 0 entries",
-                    "infoFiltered": "(filtered from _MAX_ total entries)",
-                    "lengthMenu": "Show _MENU_ entries",
-                    "loadingRecords": "Loading...",
-                    "processing": "Processing...",
-                    "search": "Search:",
-                    "zeroRecords": "No matching records found"
-                }
+                column.data().unique().sort().each(function (d, j) {
+                    // 列筛选的下拉菜单中，保留原始数据
+                    select.append($('<option></option>').val(d).html(d));
+                });
             });
-        } );
+        },
+        ordering: false,
+        autoWidth: true,
+        language: {
+            "emptyTable": "No data available in table",
+            "info": "Showing _START_ to _END_ of _TOTAL_ entries",
+            "infoEmpty": "Showing 0 to 0 of 0 entries",
+            "infoFiltered": "(filtered from _MAX_ total entries)",
+            "lengthMenu": "Show _MENU_ entries",
+            "loadingRecords": "Loading...",
+            "processing": "Processing...",
+            "search": "Search:",
+            "zeroRecords": "No matching records found"
+        },
+            "columnDefs": [{
+            "targets": 4, // age列
+            "render": function (data, type, row) {
+                var color;
+                if (row[4] == 'Passed') {
+                    color = 'green';
+                } else if (row[4] == 'Failed') {
+                    color = 'red';
+                } else {
+                    color = 'black';
+                }
+                return '<span style="color:' + color + '">' + data + '</span>';
+            }
+        }]
+    });});
     </script>
 </head>
 <body>
@@ -73,8 +85,8 @@
             <tr>
                 <th>Backlog ID</th>
                 <th>End FB</th>
-                <th>Case Name</th>
                 <th>Label</th>
+                <th>Case Name</th>
                 <th>QC Status</th>
             </tr>
         </thead>
@@ -83,8 +95,8 @@
             <tr>
                 <td>{{ item['backlog_id'] }}</td>
                 <td>{{ item['end_fb'] }}</td>
-                <td>{{ item['case_name'] }}</td>
                 <td>{{ item['label'] }}</td>
+                <td>{{ item['case_name'] }}</td>
                 <td>{{ item['qc_status'] }}</td>
             </tr>
             {% endfor %}
