--- a/Python_Flask/templates/home_template.html
+++ b/Python_Flask/templates/home_template.html
@@ -20,5 +20,7 @@ body{ font-family: "微软雅黑"}
 
 <h2><a href="http://127.0.0.1:8080/feature_info" target="_self">Feature Info</a></h2>
 
+<h2><a href="http://127.0.0.1:8080/Feature_Report" target="_self">Feature Report</a></h2>
+
 </body>
 </html>
